<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.markzfilter.activitynavigation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundDark"
                android:contentDescription="@string/hero_image_for_login_screen"
                android:scaleType="fitCenter"
                android:src="@drawable/login_hero_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorBackgroundLight"
                android:textSize="24sp" />
        </FrameLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-30dp"
            android:layout_marginTop="-30dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/login_icon_image"
            android:src="@drawable/ic_fingerprint" />

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_instruction_login_first"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/et_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/colorAccent"
                android:theme="@style/TextInputLayout"
                app:counterTextAppearance="@color/colorBackgroundDark"
                app:errorTextAppearance="@color/colorAlert"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorBackgroundDark">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/btn_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/TextInputLayout" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibAgreeToTermsButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_check_circle_unchecked"
                    android:contentDescription="@string/accept_the_terms_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_disclaimer_1" />

                <TextView
                    android:id="@+id/tvToDisclaimerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/login_disclaimer_2"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
